--- a/src/ObjectDetectorVersion.h.in
+++ b/src/ObjectDetectorVersion.h.in
@@ -1,7 +1,7 @@
 #pragma once
 
-#define VSOURCE_MAJOR_VERSION @PROJECT_VERSION_MAJOR@
-#define VSOURCE_MINOR_VERSION @PROJECT_VERSION_MINOR@
-#define VSOURCE_PATCH_VERSION @PROJECT_VERSION_PATCH@
+#define OBJECT_DETECTOR_MAJOR_VERSION @PROJECT_VERSION_MAJOR@
+#define OBJECT_DETECTOR_MINOR_VERSION @PROJECT_VERSION_MINOR@
+#define OBJECT_DETECTOR_PATCH_VERSION @PROJECT_VERSION_PATCH@
 
-#define VSOURCE_VERSION "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@"
+#define OBJECT_DETECTOR_VERSION "@PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@.@PROJECT_VERSION_PATCH@"
