3rdparty CMake variable name fixed

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -15,7 +15,7 @@ project(3rdparty LANGUAGES CXX)
 ## basic 3rd-party settings before use
 ################################################################################
 # To inherit the top-level architecture when the project is used as a submodule.
-SET(PARENT ${PARENT}_VSOURCE_3RDPARTY)
+SET(PARENT ${PARENT}_OBJECT_DETECTOR_3RDPARTY)
 # Disable self-overwriting of parameters inside included subdirectories.
 SET(${PARENT}_SUBMODULE_CACHE_OVERWRITE OFF CACHE BOOL "" FORCE)
 
