Change build directory in yaml file

--- a/.github/workflows/cmake_build.yml
+++ b/.github/workflows/cmake_build.yml
@@ -44,4 +44,4 @@ jobs:
 
     - name: Build
       # Build your program with the given configuration.
-      run: cmake --build ${{ steps.strings.outputs.build-output-dir }} --config ${{ matrix.build_type }}
+      run: cmake --build ./build --config ${{ matrix.build_type }}
